--- a/my-site.css
+++ b/my-site.css
@@ -162,6 +162,47 @@ body {
         font-size: 25px;
     }
 }
+.bg-image {
+    /* The image used */
+    background-image: url("/home/sheeban/Downloads/img3.jpg");
+    
+    /* Add the blur effect */
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+    
+    /* Full height */
+    height: 100%; 
+    
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    
+    
+/* Position text in the middle of the page/image */
+.bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.664); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid var(--main-color);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
+
+.bg-text span {
+    font-size: 2.1rem;
+    color: var(--main-color);
+    text-shadow: 1px 0 1px var(--main-color);
+}
+
 #home {
     z-index: 99;
     padding-top: 4%;
