--- a/my-site.css
+++ b/my-site.css
@@ -164,7 +164,7 @@ body {
 }
 .bg-image {
     /* The image used */
-    background-image: url("/home/sheeban/Downloads/img3.jpg");
+    background-image: url("img3.jpg");
     
     /* Add the blur effect */
     filter: blur(2px);
