--- a/my-site.css
+++ b/my-site.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-body {
+body ,html {
     font-family: 'Bitter', serif;
+    height: 100%;
+    margin: 0;
+}
+* {
+    box-sizing: border-box;
 }
 :root {
     --primary-color: white;
