--- a/my-site.css
+++ b/my-site.css
@@ -169,7 +169,7 @@ body ,html {
 }
 .bg-image {
     /* The image used */
-    background-image: url("/img3.jpg");
+    background-image: url("img3.jpg");
     
     /* Add the blur effect */
     filter: blur(2px);
