--- a/my-site.css
+++ b/my-site.css
@@ -202,7 +202,7 @@ body ,html {
     text-align: center;
 }
 
-.bg-text span {
+.bg-text p span {
     font-size: 1.5rem;
     color: var(--main-color);
     text-shadow: 1px 0 1px var(--main-color);
