--- a/my-site.css
+++ b/my-site.css
@@ -175,7 +175,7 @@ body ,html {
     
     /* Full height */
     height: 100%; 
-    
+    width:100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
