--- a/my-site.css
+++ b/my-site.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-body ,html {
+body {
     font-family: 'Bitter', serif;
-    height: 100%;
-    margin: 0;
 }
 
 :root {
