--- a/my-site.css
+++ b/my-site.css
@@ -95,6 +95,7 @@ body, html {
     }
     #header .nav-bar {
         padding-top: 30px;
+        margin-right:20px;
         display: none;
         width: 100%;
         height: auto;
