--- a/my-site.css
+++ b/my-site.css
@@ -728,3 +728,20 @@ body, html {
         font-size: 20px;
     }
 }
+.card-img-top {
+        max-height: 250px;
+        overflow: hidden;
+    }
+
+    .card-title a:link {
+        font-size: 30px;
+        background-color: transparent;
+        color: #000000;
+        text-decoration: none;
+    }
+
+    .card-title a:hover {
+        color: red;
+        background-color: transparent;
+        text-decoration: underline;
+    }
