--- a/my-site.css
+++ b/my-site.css
@@ -749,19 +749,22 @@ body, html {
     }
 }
 .card-img-top {
-        max-height: 250px;
-        overflow: hidden;
-    }
+    max-height: 250px;
+    overflow: hidden;
+}
 
-    .card-title a:link {
-        font-size: 30px;
-        background-color: transparent;
-        color: #000000;
-        text-decoration: none;
-    }
+.card-title a:link {
+    font-size: 30px;
+    background-color: transparent;
+    color: #000000;
+    text-decoration: none;
+}
 
-    .card-title a:hover {
-        color: red;
-        background-color: transparent;
-        text-decoration: underline;
-    }
+.card-title a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+}
+#project-card {
+    height:200px;
+}
